# wallguard

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.ui  FINAL_DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NOTICE  RD_TODO.md  README.md  REMOTE_DESKTOP.md  RunServer.sh  TODO.md  UI.md  build.rs  docker-compose.yml  install.sh  packbuild.ps1  packbuild.sh  rd-tunnel-test.html
crates/wg-agent/: Cargo.toml  build.rs
crates/wg-agent/src/: backoff.rs  capabilities.rs  cli_server.rs  config.rs  control_channel.rs  detect.rs  disk_buffer.rs  failure_buffer.rs  http_scanner.rs  main.rs  panic_hook.rs  platform.rs  proto.rs  proto_conv.rs  state.rs  state_machine.rs  tls.rs
crates/wg-agent/src/capture/: mod.rs  wayland.rs  windows_dxgi.rs  x11.rs
crates/wg-agent/src/encode/: mod.rs
crates/wg-agent/src/input/: enigo_injector.rs  mod.rs
crates/wg-agent/src/lifecycle/: cert_renewal.rs  mod.rs  upgrade.rs
crates/wg-agent/src/pipeline/: batch.rs  capture.rs  control.rs  grpc.rs  metrics.rs  mod.rs  transmit.rs
crates/wg-agent/src/tunnel/: http.rs  mod.rs  remote_desktop.rs  ssh.rs  transport.rs  tty.rs
crates/wg-cli/: Cargo.toml  build.rs
crates/wg-cli/src/: main.rs
crates/wg-cli/src/cmd/: autostart.rs  enroll.rs  mod.rs  status.rs  upgrade.rs
crates/wg-server/: Cargo.toml  build.rs
crates/wg-server/src/: command_tracker.rs  connection_registry.rs  dev_setup.rs  error.rs  events.rs  heartbeat.rs  main.rs  proto.rs  telemetry.rs
crates/wg-server/src/api/: auth.rs  devices.rs  failures.rs  http_services.rs  metrics.rs  mod.rs  sse.rs  static_files.rs  traffic.rs  tunnels.rs  users.rs  ws.rs
crates/wg-server/src/auth/: api_key.rs  jwt.rs  mod.rs  password.rs  refresh.rs
crates/wg-server/src/db/: pool.rs
crates/wg-server/src/grpc/: control.rs  data.rs  mod.rs  provisioning.rs
crates/wg-server/src/middleware/: auth.rs  mod.rs  rbac.rs  request_id.rs
crates/wg-server/src/pki/: ca.rs  mod.rs
crates/wg-server/src/routes/: installation_codes.rs  mod.rs
crates/wg-server/src/tunnel/: listener.rs  mod.rs  registry.rs
crates/wg-shared/: Cargo.toml
crates/wg-shared/src/: api.rs  capabilities.rs  lib.rs  pki.rs  rdp.rs  types.rs
crates/wg-testkit/: Cargo.toml  build.rs
crates/wg-testkit/src/: lib.rs
crates/wg-ui/: Cargo.toml  Trunk.toml  index.html
crates/wg-ui/public/: style.css
crates/wg-ui/src/: app.rs  auth.rs  lib.rs
crates/wg-ui/src/api/: auth.rs  devices.rs  failures.rs  http_services.rs  install_codes.rs  mod.rs  tunnels.rs  users.rs
crates/wg-ui/src/components/: device_card.rs  mod.rs  packet_chart.rs  remote_desktop.rs  status_badge.rs  terminal.rs
crates/wg-ui/src/pages/: dashboard.rs  login.rs  mod.rs
wallguard/: Cargo.toml  build.rs
wallguard-cli/: Cargo.toml  build.rs
wallguard-cli/src/: arguments.rs  config.rs  main.rs  update.rs  wallguard_cli.rs
wallguard-cli/src/autostart/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
wallguard-common/: Cargo.toml  build.rs
wallguard-common/src/: cert_verifier.rs  interface_snapshot.rs  lib.rs  os_if.rs  single_instance.rs  timestamped_packet.rs  wallguard_interface.rs  wallguard_platform.rs  wallguard_tunnel_interface.rs
wallguard-common/src/protobuf/: mod.rs  utils.rs  wallguard_cli.rs  wallguard_commands.rs  wallguard_models.rs  wallguard_service.rs  wallguard_tunnel.rs
wallguard-server/: Cargo.toml  Dockerfile  README.md  build.rs
wallguard-server/src/: app_context.rs  linux_main.rs  main.rs  token.rs
wallguard-server/src/control_service/: config.rs  ensure_device_exists_and_authrorized.rs  service.rs
wallguard-server/src/control_service/rpc/: control_channel.rs  get_device_settings.rs  handle_config_data.rs  handle_connections_data.rs  handle_packets_data.rs  handle_system_resources_data.rs  mod.rs  report_services.rs  request_tunnel.rs
wallguard-server/src/datastore/: client.rs  db_tables.rs  mod.rs
wallguard-server/src/datastore/builders/: register_device_request_builder.rs
wallguard-server/src/datastore/models/: alias.rs  device.rs  device_configuration.rs  heartbeat.rs  (+8 more)
wallguard-server/src/fireparse/: mod.rs  models.rs  utils.rs
wallguard-server/src/http_api/: config.rs  mod.rs
wallguard-server/src/http_proxy/: config.rs  mod.rs
wallguard-server/src/http_proxy_v2/: config.rs  connector.rs  mod.rs  proxy.rs
wallguard-server/src/mcp/: config.rs  middleware.rs  mod.rs  schema.rs  service.rs  session_manager.rs
wallguard-server/src/orchestrator/: auth_request_handler.rs  client.rs  control_stream.rs  mod.rs  new_connection_handler.rs
wallguard-server/src/reverse_tunnel/: config.rs  mod.rs  tunnel_adapter.rs  tunnel_authentication_task.rs  tunnel_instance.rs  tunnel_token.rs
wallguard-server/src/token_provider/: data.rs  mod.rs
wallguard-server/src/traffic_handler/: ip_info.rs  mod.rs  msg_parser.rs
wallguard-server/src/tunneling/: async_io.rs  command.rs  mod.rs  timeout_controller.rs  tunnel_common.rs  tunnel_common_data.rs
wallguard-server/src/utilities/: hash.rs  mod.rs  ssh.rs  str.rs  time.rs
wallguard/src/: app_context.rs  arguments.rs  constants.rs  context.rs  device_uuid.rs  main.rs  pty.rs  reverse_tunnel.rs  server_data.rs  storage.rs  token_provider.rs  wg_server.rs
wallguard/src/autostart/: freebsd.rs
wallguard/src/cli/: mod.rs  wallguard_cli.rs
wallguard/src/client_data/: device_uuid.rs  mod.rs  platform.rs  target_os.rs
wallguard/src/control_channel/: await_authorization.rs  mod.rs  post_startup.rs  send_authenticate.rs
wallguard/src/daemon/: authorization_task.rs  cli_server.rs  mod.rs  state.rs  wallguard_cli.rs
wallguard/src/data_transmission/: dump_dir.rs  grpc_handler.rs  item_buffer.rs  mod.rs  transmission_manager.rs
wallguard/src/fireparse/: mod.rs
wallguard/src/netinfo/: mod.rs
wallguard/src/platform/: mod.rs  target_os.rs
wallguard/src/remote_desktop/: client.rs  messages.rs  mod.rs  screen_capturer.rs  screenshot.rs  uinput_handler.rs
wallguard/src/utilities/: hash.rs  io.rs  mod.rs  ssh.rs  system.rs  time.rs
(+474 files in other folders)
