[workspace]
resolver = "2"
members = [
    "wallguard",
    "wallguard-cli", "wallguard-common",
    "wallguard-server"
]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tonic = { version = "0.13.1", features = ["_tls-any", "tls-native-roots"] }
prost = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
nullnet-liberror = "0.1.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
