[package]
name = "wallguard-cli"
version = "1.1.11"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
clap = {version = "4.5.57", features = ["derive"]}
anyhow = "1.0.98"
which = "7"
wallguard-common = { path = "../wallguard-common" }
sysinfo = "0.37.2"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

