[package]
name = "wallguard-common"
version = "0.1.0"
edition = "2024"

[dependencies]
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
nullnet-liberror.workspace = true

bincode = "1.3.3"
get_if_addrs = "0.5.3"
pnet = "0.35.0"

[build-dependencies]
tonic-build = "0.13.1"