[package]
name = "wallguard-common"
version = "1.3.4"
edition = "2024"

[dependencies]
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
nullnet-liberror.workspace = true
rustls.workspace = true

bincode = "1.3.3"
get_if_addrs = "0.5.3"
pnet = "0.35.0"
fs4 = { version = "1.1.0", features = ["sync"] }

[build-dependencies]
tonic-build = "0.13.1"
