[package]
name = "wallguard-server"
version = "1.3.5"
edition = "2024"
authors = [
    "Giuliano Bellini <gyulyvgc99@gmail.com>", 
    "Anton Liashkevich <anton.liashkevich.eng@gmail.com>"
]
description = "A centralized management system for Nullnet agents"
readme = "README.md"
#homepage = ""
repository = "https://github.com/NullNet-ai/wallguard-server"
#documentation = ""
license = "AGPL-3.0-only"
keywords = ["firewall", "network", "manager", "centralized", "monitor", "agent", "mcp-server"]
categories = ["network-programming"]
publish = false

[dependencies]

nullnet-libipinfo = "0.2.1"
log = "0.4.29"
env_logger = "0.11.8"
rand = "0.9.3"
sha2 = "0.10.9"
actix-web = "4.12.1"
actix-cors = "0.7.1"
actix-ws = "0.3.0"

futures-util = "0.3.31"
webpki-roots = "1.0.6"
chrono = "0.4.41"
indexmap = "2.12.1"
base64 = "0.22.1"
wallguard-common = { path = "../wallguard-common" }
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
serde.workspace = true
rustls.workspace = true
serde_json.workspace = true
nullnet-liberror.workspace = true
tokio-rustls.workspace = true
russh.workspace = true

webrtc = "0.14.0"
rmcp = { version = "0.11.0", features = [
    "server", 
    "transport-streamable-http-server-session", 
    "transport-streamable-http-server", 
    "schemars"
    ] }
tokio-util = "0.7.17"
axum = "0.8.6"
cfg-if = "1.0.4"
async-trait = "0.1.89"

[target.'cfg(target_os = "linux")'.dependencies]
pingora = {version = "0.8.0", features = ["proxy", "openssl"] }

[build-dependencies]
tonic-build = "0.13.1"

[badges]
maintenance = { status = "actively-developed" }
