[package]
name = "wallguard"
version = "0.1.15"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.29"
sha2 = "0.10.9"
portable-pty = "0.9.0"
smbios-lib = "0.9.2"
libc = "0.2.180"
chrono = "0.4.41"
once_cell = "1.21.3"
nullnet-traffic-monitor = "0.1.5"
sysinfo = { version = "0.37.2", default-features = false, features = ["disk"] }
async-channel = "2.3.1"
nullnet-libresmon = "0.1.2"
wallguard-common = { path = "../wallguard-common" }
xmltree = "0.12.0"
md5 = "0.8.0"
nftables = "0.6.3"
enigo = "0.6.1"
copypasta = "0.10.2"
openh264 = "0.9.0"
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
nullnet-liberror.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
whoami = "2.0.2"

[target.'cfg(not(target_os = "freebsd"))'.dependencies]
captis = "0.6.1"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
winapi = {version = "0.3.9", features = ["winerror", "iphlpapi", "handleapi", "tlhelp32"]}

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["user"] }
