[package]
name = "wallguard"
version = "1.3.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
flexi_logger = "0.29"
log = "0.4.29"
sha2 = "0.10.9"
portable-pty = "0.9.0"
smbios-lib = "0.9.2"
libc = "0.2.180"
chrono = "0.4.41"
once_cell = "1.21.4"
nullnet-traffic-monitor = "0.1.5"
etherparse = "0.19.0"
sysinfo = { version = "0.37.2", default-features = false, features = ["disk"] }
async-channel = "2.3.1"
nullnet-libresmon = "0.1.2"
wallguard-common = { path = "../wallguard-common" }
xmltree = "0.12.0"
md5 = "0.8.0"
nftables = "0.6.3"
enigo = "0.6.1"
copypasta = "0.10.2"
openh264 = "0.9.0"
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
nullnet-liberror.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
whoami = "2.0.2"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
x11rb = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
# Wayland screen capture via wlr-screencopy protocol (sway, hyprland, KDE Plasma, etc.)
# Uses wayland-client directly to avoid the gbm/EGL system-library dependency that
# libwayshot pulls in — the SHM (CPU) buffer path needs no GPU stack.
wayland-client = "0.31"
wayland-protocols-wlr = "0.3"
# Virtual uinput device for keyboard/mouse injection on Wayland (kernel-level, no X11 needed)
evdev = "0.12"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
winapi = {version = "0.3.9", features = ["winerror", "iphlpapi", "handleapi", "tlhelp32", "wingdi", "winuser", "windef", "minwindef"]}

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["user", "mman", "fs"] }
