[package]
name    = "wg-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wg-agent"
path = "src/main.rs"

[features]
# Enables screen capture, H.264 encoding, and keyboard/mouse injection.
# Omit this feature for headless firewall appliance builds.
# Remote desktop capability is also gated at runtime by a display probe
# (see crates/wg-agent/src/capabilities.rs), so the feature may be compiled
# in on FreeBSD without forcing the capability to be advertised.
remote-desktop = [
    "dep:enigo",
    "dep:openh264",
    "dep:x11rb",
]

[dependencies]
wg-shared  = { path = "../wg-shared" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
uuid       = { workspace = true }
time       = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow    = { workspace = true }
thiserror = { workspace = true }
rand      = { workspace = true }
bytes     = { workspace = true }
clap      = { workspace = true }
libc      = { workspace = true }
sysinfo   = { workspace = true }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rcgen                       = { workspace = true }

# --- tunnel transport + gRPC TLS ---
quinn            = { workspace = true }
rustls           = { workspace = true }
rustls-pki-types = { workspace = true }
tokio-rustls     = { workspace = true }
rustls-pemfile   = { workspace = true }
portable-pty     = { workspace = true }
tower            = { workspace = true }
hyper-util       = { workspace = true }

# Remote-desktop optional deps
enigo    = { workspace = true, optional = true }
openh264 = { workspace = true, optional = true }
x11rb    = { workspace = true, optional = true }

pcap = { version = "2" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
tonic-build         = { version = "0.12" }
protoc-bin-vendored = { workspace = true }
