[package]
name    = "wg-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wg-agent"
path = "src/main.rs"

[dependencies]
wg-shared  = { path = "../wg-shared" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
uuid       = { workspace = true }
time       = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow    = { workspace = true }
thiserror = { workspace = true }
rand      = { workspace = true }
bytes     = { workspace = true }
clap      = { workspace = true }
libc      = { workspace = true }
sysinfo   = { workspace = true }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rcgen                       = { workspace = true }

# --- tunnel transport + gRPC TLS ---
quinn            = { workspace = true }
rustls           = { workspace = true }
rustls-pki-types = { workspace = true }
tokio-rustls     = { workspace = true }
rustls-pemfile   = { workspace = true }
portable-pty     = { workspace = true }
tower            = { workspace = true }
hyper-util       = { workspace = true }

enigo    = { workspace = true }
openh264 = { workspace = true }
x11rb    = { workspace = true }

pcap = { version = "2" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["test-util"] }

[build-dependencies]
tonic-build         = { version = "0.12" }
protoc-bin-vendored = { workspace = true }
