[package]
name    = "wg-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wg-cli"
path = "src/main.rs"

[dependencies]
wg-shared = { path = "../wg-shared" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow    = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-build         = { version = "0.12" }
protoc-bin-vendored = { workspace = true }
