[package]
name    = "wg-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wg-server"
path = "src/main.rs"

[dependencies]
wg-shared = { path = "../wg-shared" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }

axum  = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }

sqlx = { workspace = true }

argon2       = { workspace = true }
jsonwebtoken = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
time       = { workspace = true }
bytes      = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow    = { workspace = true }
thiserror = { workspace = true }

rust-embed = { workspace = true }
rcgen      = { workspace = true }

[build-dependencies]
tonic-build         = { version = "0.12" }
protoc-bin-vendored = { workspace = true }
