[package]
name    = "wg-testkit"
version = "0.1.0"
edition = "2021"

# Integration test harness.
# Spawns real wg-server + wg-agent instances against a test database.
# Not included in production builds.

[dependencies]
wg-shared = { path = "../wg-shared" }

tokio      = { workspace = true }
tonic      = { workspace = true }
prost      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
time       = { workspace = true }

anyhow   = { workspace = true }
tempfile = { workspace = true }
rcgen    = { workspace = true }

testcontainers        = { workspace = true }
testcontainers-modules = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build         = { version = "0.12" }
protoc-bin-vendored = { workspace = true }
