[package]
name    = "wg-ui"
version = "0.1.0"
edition = "2021"

# This crate is compiled to wasm32-unknown-unknown by trunk.
# Do not add native-only deps (tokio, tonic, sqlx, etc.).
# Build with: trunk build --release
# Excluded from workspace default-members; not part of `cargo build`.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wg-shared = { path = "../wg-shared" }

leptos        = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }

reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = { version = "1" }
uuid       = { version = "1",    features = ["v4", "serde", "js"] }

web-sys = { version = "0.3", features = [
    "Window", "Document", "Element",
    "Storage",
    "WebSocket", "MessageEvent", "CloseEvent",
    "EventSource",
    "VideoDecoder", "VideoDecoderConfig", "VideoDecoderInit",
    "EncodedVideoChunk", "EncodedVideoChunkInit", "EncodedVideoChunkType",
    "VideoFrame",
] }
gloo        = { version = "0.11" }
gloo-net    = { version = "0.6",  features = ["websocket", "eventsource"] }
gloo-timers = { version = "0.3" }
js-sys      = { version = "0.3" }
wasm-bindgen        = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
futures = { version = "0.3", default-features = false, features = ["std"] }
